--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "FSOC Project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js"
   },
+  "engines" :{ 
+        "npm": ">=8.0.0 <9.6.3", 
+        "node": ">=16.0.0 <17.0.0" 
+      },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/TirthankarRoy007/FSOC-Project.git"
